...
            android:maxLines="1"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:visibility="gone"/>

    <ImageButton
...
